--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://hishammahfoudh.github.io/React-project-Style",
-  "name": "react-project",
+  "homepage": "https://heshambenmahfoudh.github.io/React-pro-Style",
+  "name": "Style",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
